--- a/cmd/res/config-mqtt.json
+++ b/cmd/res/config-mqtt.json
@@ -1,4 +1,12 @@
 {
+  "mongo": {
+    "host": "0.0.0.0",
+    "port": 27017,
+    "username": "dbAdmin",
+    "password": "password",
+    "collection": "sampleData",
+    "dbName": "AlvariumDB"
+  },
   "sdk" : {
     "annotators": ["tpm","pki"],
     "hash": {
